--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }} - Woodlands International Fencing Club</title>
+    <title>{{ page.title }} HSJournal</title>
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicon.png">
     <style>
+        
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: #09550c;
             margin: 0;
             padding: 0;
             background-color: #FFFAF0;
@@ -20,7 +21,7 @@
             padding: 0 20px;
         }
         header {
-            background-color: #8B2323;
+            background-color: #156b22;
             color: #FFD700;
             padding: 1rem 0;
         }
