--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,7 @@
             margin: 0;
             font-size: 2em;
             max-width: 60%;
+            white-space: nowrap;
         }
         nav {
             background-color: #FFD700;
@@ -77,7 +78,7 @@
             border-left: 3px solid #228B22;
         }
         h1, h2, h3 {
-            color: #8B2323;
+            color: #efe9e9;
         }
         footer {
             text-align: center;
