--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,20 +136,16 @@
             </div>
         </div>
     </header>
-    <nav>
-        <div class="container">
-            <div class="menu-toggle">☰</div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="group-workouts.html">Group Workouts</a></li>
-                <li><a href="individual-workouts.html">Individual Workouts</a></li>
-                <li><a href="mental-training.html">Mental Training</a></li>
-                <li><a href="diet.html">Nutrition</a></li>
-                <li><a href="calendar.html">Calendar</a></li>
-                <li><a href="boxing-timer.html">BoxingTimer App</a></li>
-            </ul>
-        </div>
-    </nav>
+        <nav>
+            <div class="dropdown">
+                <button class="dropbtn">Dropdown</button>
+                <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                </div>
+            </div> 
+        </nav>
     <main>
         <div class="container">
             <div class="content">
