--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} HSJournal</title>
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicon.png">
+    <link rel="" type="image/png" href="{{ site.baseurl }}/assets/favicon.png">
     <style>
         /* Dropdown Button */
         .dropbtn {
