--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@
     <header>
         <div class="container header-content">
             <div class="logo-container">
-                <img src="/Journal/assets/us.jpg" alt="Logo" onerror="this.onerror=null;this.src='/assets/us.jpg';" style="border-radius: 40px;">
+                <img src="/HSJournal/assets/us.jpg" alt="Logo" onerror="this.onerror=null;this.src='/assets/us.jpg';" style="border-radius: 40px;">
                 <h1>Henry Seefeldt: Student, Fencer, Developer</h1>
             </div>
         </div>
